--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <title>Great THUG</title>
+    <title>RACK FF</title>
 
     <link rel="icon" type="image/png" href="assets/cursor.gif">
 
@@ -100,7 +100,7 @@
             box-shadow: 0 0 35px rgba(226, 53, 53, 1);
         }
 
-        /* Effet de peinture éclaboussée */
+        /* Developer and Youtuber*/
         .paint-splash {
             position: absolute;
             top: 50%;
@@ -603,29 +603,29 @@
         <h1 id="main-title"></h1>
         <p id="citation-text"></p>
         <div class="socials">
-            <a href="https://github.com/paulafredo" target="_blank" rel="noopener noreferrer" aria-label="Profil GitHub">
+            <a href="https://github.com/invalid" target="_blank" rel="noopener noreferrer" aria-label="Profil GitHub">
                 <i class="fab fa-github"></i>
             </a>
-            <a href="https://www.tiktok.com/@thug.4ff" target="_blank" rel="noopener noreferrer" aria-label="Profil TikTok">
+            <a href="https://www.tiktok.com/@invalid" target="_blank" rel="noopener noreferrer" aria-label="Profil TikTok">
                 <i class="fab fa-tiktok"></i>
             </a>
-            <a href="https://www.youtube.com/@thug.4ff" target="_blank" rel="noopener noreferrer" aria-label="Chaîne YouTube">
+            <a href="https://www.youtube.com/@rackff7" target="_blank" rel="noopener noreferrer" aria-label="Chaîne YouTube">
                 <i class="fab fa-youtube"></i>
             </a>
-            <a href="https://discord.gg/BhQk4q3JGJ" target="_blank" rel="noopener noreferrer" aria-label="Serveur Discord">
+            <a href="https://discord.gg/invalid" target="_blank" rel="noopener noreferrer" aria-label="Serveur Discord">
                 <i class="fab fa-discord"></i>
             </a>
-            <a href="https://t.me/thug4ff" target="_blank" rel="noopener noreferrer" aria-label="Canal Telegram">
+            <a href="https://t.me/invalid" target="_blank" rel="noopener noreferrer" aria-label="Canal Telegram">
                 <i class="fab fa-telegram"></i>
             </a>
         </div>
     </div>
 
     <div class="intro" id="intro">
-        <div class="intro-text">Cliquez pour entrer</div>
+        <div class="intro-text">Enter</div>
     </div>
 
-    <button id="sound-toggle" aria-label="Activer/Désactiver le son">
+    <button id="sound-toggle" aria-label="Volume ">
         <i class="fas fa-volume-up"></i>
     </button>
 
@@ -646,7 +646,7 @@
         const titleElement = document.getElementById("main-title");
         const citationElement = document.getElementById("citation-text");
 
-        const originalTitleText = "Great THUG";
+        const originalTitleText = "Great RACK FF";
         const originalCitationText = "I don't seek power - I am power !";
 
         let isPlaying = false;
